--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,10 @@ Version: 0.0.1
 Author: Jonathan Kennel
 Maintainer: Jonathan Kennel <jkennel@uoguelph.ca>
 Description: This package contains one function called accdb_to_csv which converts the tables of a Microsoft Access database to csv files.
-License: What license is it under?
-Imports: rJava
+License: Apache License (>= 2.0)
+Imports: 
+  rJava,
+  data.table
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
