--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,11 @@ Author: Jonathan Kennel
 Maintainer: Jonathan Kennel <jkennel@uoguelph.ca>
 Description: This package contains one function called accdb_to_csv which converts the tables of a Microsoft Access database to csv files.
 License: Apache License (>= 2.0)
+Depends:
+  rJava
 Imports: 
-  rJava,
   data.table
 Encoding: UTF-8
 LazyData: true
+SystemRequirements: 'Java' version >= 8
 RoxygenNote: 7.1.1
