--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,10 @@ matrix:
 
 r_packages:
   - data.table
-  - covr
-
-after_success:
-  - Rscript -e 'covr::codecov()'
-
-warnings_are_errors: true
 
 
 before_install:
- - export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/jre
- - export PATH=$PATH:$JAVA_HOME/bin
- - export LD_LIBRARY_PATH=/usr/lib/jvm/java-8-oracle/lib/amd64:/usr/lib/jvm/java-8-oracle/jre/lib/amd64/server
- - sudo R CMD javareconf
+  - sudo apt install r-cran-rjava
+  - sudo R CMD javareconf
 
+warnings_are_errors: true
