--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Jonathan Kennel
 Maintainer: Jonathan Kennel <jkennel@uoguelph.ca>
 Description: This package contains one function called accdb_to_csv which converts the tables of a Microsoft Access database to csv files.
 License: Apache License (>= 2.0)
+SystemRequirements: java (>= 1.6)
 Imports: 
   rJava,
   data.table
