--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ r_packages:
 before_install:
   - sudo apt-get install -y default-jre
   - sudo apt-get install -y default-jdk
-  - sudo R CMD javareconf
   - sudo apt-get install r-cran-rjava
+
+before_script:
+  - sudo R CMD javareconf
 
 warnings_are_errors: true
