--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,8 @@ r_packages:
   - data.table
 
 
-before_install:
-  - sudo apt-get install -y default-jre
-  - sudo apt-get install -y default-jdk
-  - sudo apt-get install r-cran-rjava
+apt_packages:
+  - r-cran-rjava
 
-before_script:
-  - sudo R CMD javareconf
 
 warnings_are_errors: true
